--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "version": "6.0.0"
   },
   "dependencies": {
+    "@upupming/hexo-renderer-markdown-it-plus": "^2.0.2",
     "hexo": "^6.0.0",
     "hexo-deployer-git": "^3.0.0",
     "hexo-excerpt": "^1.2.1",
@@ -20,8 +21,9 @@
     "hexo-generator-index": "^2.0.0",
     "hexo-generator-json-content": "^4.2.3",
     "hexo-generator-tag": "^1.0.0",
+    "hexo-image-link": "^0.0.3",
+    "hexo-math": "^4.0.0",
     "hexo-renderer-ejs": "^2.0.0",
-    "hexo-renderer-marked": "^5.0.0",
     "hexo-renderer-stylus": "^2.0.0",
     "hexo-server": "^3.0.0",
     "hexo-theme-landscape": "^0.0.3",
