--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ theme: next
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repo: git@github.com:JiaHaoFang/JiaHaoFang.github.io.git
+  repo: https://github.com/JiaHaoFang/JiaHaoFang.github.io.git
   branch: master
 
 # Automatically Excerpt (Not recommend).
