--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "hexo-generator-sitemap": "^2.2.0",
     "hexo-generator-tag": "^1.0.0",
     "hexo-image-link": "^0.0.3",
-    "hexo-math": "^4.0.0",
+    "hexo-math": "^5.0.0",
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-stylus": "^2.0.0",
     "hexo-server": "^3.0.0",
     "hexo-theme-landscape": "^0.0.3",
-    "hexo-wordcount": "^6.0.1"
+    "hexo-theme-next": "^8.19.2",
+    "hexo-wordcount": "^6.0.1",
+    "highlight.js": "^11.9.0"
   }
 }
