[Up]支持本地搜索；更新文章

--- a/_config.yml
+++ b/_config.yml
@@ -127,3 +127,10 @@ markdown_it_plus:
     typographer:
     quotes: “”‘’
     pre_class: highlight
+
+# Local Search
+search:
+  path: search.xml
+  field: post
+  format: html
+  limit: 10000
