--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-index": "^2.0.0",
     "hexo-generator-json-content": "^4.2.3",
+    "hexo-generator-searchdb": "^1.4.1",
     "hexo-generator-sitemap": "^2.2.0",
     "hexo-generator-tag": "^1.0.0",
     "hexo-image-link": "^0.0.3",
