--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "build": "hexo generate",
     "clean": "hexo clean",
     "deploy": "hexo deploy",
-    "server": "hexo server"
+    "server": "hexo server",
+    "elog:init": "elog init",
+    "sync:local": "elog sync -e .elog.env",
+    "sync": "elog sync"
   },
   "hexo": {
     "version": "6.3.0"
@@ -31,6 +34,7 @@
     "hexo-theme-landscape": "^0.0.3",
     "hexo-theme-next": "^8.19.2",
     "hexo-wordcount": "^6.0.1",
-    "highlight.js": "^11.9.0"
+    "highlight.js": "^11.9.0",
+    "@elog/cli": "^0.14.7"
   }
 }
