--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -46,7 +46,7 @@ jobs:
           git config --global user.name "JiaHaoFang"
           git config --global user.email "473993067@qq.com"
 
-      - name: 提交yuque拉取的文章到GitHub仓库
+      - name: 提交拉取的文章到GitHub仓库
         run: |
           echo `date +"%Y-%m-%d %H:%M:%S"` begin > time.txt
           git add .
@@ -65,7 +65,7 @@ jobs:
       - name: 部署到Github Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          deploy_key: ${{ secrets.GITHUB_TOKEN }}
+          personal_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: source/_posts
           external_repository: JiaHaoFang/JiaHaoFang.github.io
           publish_branch: master
