--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "version": "6.3.0"
   },
   "dependencies": {
+    "@elog/cli": "^0.14.7",
     "@upupming/hexo-renderer-markdown-it-plus": "^2.0.2",
     "hexo": "^6.3.0",
     "hexo-deployer-git": "^3.0.0",
@@ -34,7 +35,6 @@
     "hexo-theme-landscape": "^0.0.3",
     "hexo-theme-next": "^8.19.2",
     "hexo-wordcount": "^6.0.1",
-    "highlight.js": "^11.9.0",
-    "@elog/cli": "^0.14.7"
+    "highlight.js": "^11.9.0"
   }
 }
