[Up]更新自动化配置

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -61,5 +61,5 @@ jobs:
           personal_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: source/_posts
           external_repository: JiaHaoFang/JiaHaoFang.github.io
-          publish_branch: master
+          publish_branch: source
           commit_message: ${{ github.event.head_commit.message }}
