[Up]更新自动化配置

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -58,8 +58,9 @@ jobs:
       - name: 生成静态文件
         run: |
           # 对应package.json中的script.build
-          npm run build
-          num run deploy
+          hexo clean
+          hexo generate
+          hexo deploy
 
       - name: 部署到Github Pages
         uses: peaceiris/actions-gh-pages@v3
