--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@
 # Site
 title:  阿告的窝
 subtitle: ''
-description: Bravo!
-keywords:
+description: ''
+keywords: ''
 author: 阿告今天学习了吗
 language: zh-CN
 timezone: ''
