--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -56,12 +56,13 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: 生成静态文件
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           # 对应package.json中的script.build
           hexo clean
           hexo generate
           hexo deploy
-        secrets: inherit
 
       - name: 部署到Github Pages
         uses: peaceiris/actions-gh-pages@v3
