--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ remote_theme: https://github.com/theme-next/hexo-theme-next
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repo: https://github.com/JiaHaoFang/JiaHaoFang.github.io.git
+  repo: git@github.com:JiaHaoFang/JiaHaoFang.github.io.git
   branch: master
 
 # Automatically Excerpt (Not recommend).
