--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -60,12 +60,14 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           # 对应package.json中的script.build
-          hexo clean
-          hexo generate
-          hexo deploy
+          # hexo clean
+          # hexo generate
+          # hexo deploy
+          npm run build
+          npm run deploy
 
       - name: 部署到Github Pages
-        uses: peaceiris/actions-gh-pages@v3
+        uses: peaceiris/actions-gh-pages@v4
         with:
           personal_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: source/_posts
