--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -64,7 +64,7 @@ jobs:
           # hexo generate
           # hexo deploy
           npm run build
-          npm run deploy
+          # npm run deploy
 
       - name: 部署到Github Pages
         uses: peaceiris/actions-gh-pages@v4
