--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -70,7 +70,7 @@ jobs:
         uses: peaceiris/actions-gh-pages@v4
         with:
           personal_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: source/_posts
+          publish_dir: ./public
           external_repository: JiaHaoFang/JiaHaoFang.github.io
           publish_branch: master
           commit_message: ${{ github.event.head_commit.message }}
