[Up]更新站点配置

--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title:  阿告的窝
+title:  阿告今天学习了吗
 subtitle: ''
 description: ''
 keywords: ''
-author: 阿告今天学习了吗
+author: 阿告2426
 language: zh-CN
 timezone: ''
 
