--- a/_config.next.yml
+++ b/_config.next.yml
@@ -815,7 +815,8 @@ pdf:
 mermaid:
   enable: true
   # Available themes: default | dark | forest | neutral
-  theme: dark
+  theme: default
+  cdn: //cdn.jsdelivr.net/npm/mermaid@8/dist/mermaid.min.js
 
 
 # ---------------------------------------------------------------
