--- a/_config.next.yml
+++ b/_config.next.yml
@@ -40,10 +40,10 @@ custom_file_path:
 # ---------------------------------------------------------------
 
 favicon:
-  small: /favicon/sleeping-cat.png
-  medium: /favicon/sleeping-cat.png
-  apple_touch_icon: /sleeping-cat.png
-  safari_pinned_tab: /sleeping-cat.png
+  small: /favicon/moon-cat.png
+  medium: /favicon/moon-cat.png
+  apple_touch_icon: /favicon/moon-cat.png
+  safari_pinned_tab: /favicon/moon-cat.png
   #android_manifest: /images/manifest.json
   #ms_browserconfig: /images/browserconfig.xml
 
