--- a/_config.yml
+++ b/_config.yml
@@ -96,6 +96,7 @@ exclude:
 ignore:
 
 # Extensions
+plugins: hexo-generator-sitemap
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 ## https://github.com/fi3ework/hexo-theme-archer
