--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "hexo-generator-tag": "^1.0.0",
     "hexo-image-link": "^0.0.3",
     "hexo-math": "^5.0.0",
+    "hexo-related-popular-posts": "^5.0.1",
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-stylus": "^2.0.0",
     "hexo-server": "^3.0.0",
+    "hexo-symbols-count-time": "^0.7.1",
     "hexo-theme-landscape": "^0.0.3",
     "hexo-theme-next": "^8.19.2",
     "hexo-wordcount": "^6.0.1",
