--- a/_config.next.yml
+++ b/_config.next.yml
@@ -29,7 +29,7 @@ custom_file_path:
   postBodyEnd: source/_data/post-body-end.swig
   #footer: source/_data/footer.swig
   #bodyEnd: source/_data/body-end.swig
-  variable: source/_data/variables.styl
+  # variable: source/_data/variables.styl
   #mixin: source/_data/mixins.styl
   style: source/_data/styles.styl
 
@@ -424,7 +424,7 @@ font:
   global:
     external: true
     # family: Lato
-    family: Noto Sans
+    family: Roboto Slab, Noto Serif SC
     size:
 
   # Font settings for site title (.site-title).
