--- a/_config.next.yml
+++ b/_config.next.yml
@@ -816,7 +816,9 @@ pdf:
 mermaid:
   enable: true
   # Available themes: default | dark | forest | neutral
-  theme: neutral
+  theme: 
+    light: default
+    dark: default
   cdn: //cdn.jsdelivr.net/npm/mermaid@8/dist/mermaid.min.js
 
 
